--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@ play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
 # Registers the filters
 # ~~~~~
 play.filters.enabled += "play.filters.csp.CSPFilter"
+play.filters.enabled += "play.filters.cors.CORSFilter"
 
 # The application DI modules
 # ~~~~~
