--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -55,9 +55,9 @@ silhouette {
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
   google.redirectURL="http://localhost:9000/authenticate/google"
-  google.clientID=""
+  google.clientID="806647276307-ijr37vg5hl87cp9deg4cashnvabe3q7v.apps.googleusercontent.com"
   google.clientID=${?GOOGLE_CLIENT_ID}
-  google.clientSecret=""
+  google.clientSecret="kNPz780_Dc5-lGwfwH6iJ-_I"
   google.clientSecret=${?GOOGLE_CLIENT_SECRET}
   google.scope="profile email"
 
