--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,7 @@
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
 play.http.secret.key="changeme"
+play.server.http.idleTimeout = null
 
 # The application languages
 # ~~~~~
@@ -17,7 +18,8 @@ play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
 
 # Registers the filters
 # ~~~~~
-play.filters.enabled += "play.filters.csp.CSPFilter"
+play.filters.disabled += "play.filters.csp.CSPFilter"
+play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
 # The application DI modules
@@ -35,6 +37,10 @@ play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorH
 play.assets {
   path = "/public"
   urlPrefix = "/assets"
+}
+
+play.filters.hosts {
+  allowed = ["."]
 }
 
 # Akka config
