--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -54,7 +54,7 @@ silhouette {
   # Google provider
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
-  google.redirectURL="https://ancient-savannah-40407.herokuapp.com/authenticate/google"
+  google.redirectURL="https://play-silhouette-seed.herokuapp.com/authenticate/google"
   google.clientID="806647276307-ijr37vg5hl87cp9deg4cashnvabe3q7v.apps.googleusercontent.com"
   google.clientID=${?GOOGLE_CLIENT_ID}
   google.clientSecret="kNPz780_Dc5-lGwfwH6iJ-_I"
