--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,9 +58,11 @@ akka {
 
 # Play mailer
 play.mailer {
-  host = "localhost"
-  port = 25
-  mock = true
+  smtp.host=smtp.gmail.com
+  smtp.port=587
+  smtp.ssl=yes
+  smtp.user="me@gmail.com"
+  smtp.password="myPassword"
 }
 
 # Security Filter Configuration - Content Security Policy
