--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -8,14 +8,11 @@ play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
 # Play mailer
 play.mailer {
-  host = "smtp.sendgrid.net"
-  port = 587
-  tls = true
-  mock = false
-  user = ""
-  user = ${?SENDGRID_USERNAME}
-  password = ""
-  password = ${?SENDGRID_PASSWORD}
+  smtp.host=smtp.gmail.com
+  smtp.port=587
+  smtp.ssl=yes
+  smtp.user="me@gmail.com"
+  smtp.password="myPassword"
 }
 
 silhouette {
