--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,11 +58,9 @@ akka {
 
 # Play mailer
 play.mailer {
-  smtp.host=smtp.gmail.com
-  smtp.port=587
-  smtp.ssl=yes
-  smtp.user="me@gmail.com"
-  smtp.password="myPassword"
+  host = "localhost"
+  port = 25
+  mock = true
 }
 
 # Security Filter Configuration - Content Security Policy
