--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -8,11 +8,14 @@ play.http.forwarded.trustedProxies=["0.0.0.0/0", "::/0"]
 
 # Play mailer
 play.mailer {
-  smtp.host=smtp.gmail.com
-  smtp.port=587
-  smtp.ssl=yes
-  smtp.user="me@gmail.com"
-  smtp.password="myPassword"
+  host = "smtp.gmail.com"
+  port = 587
+  tls = true
+  mock = true
+  user = ""
+  user = ${?SENDGRID_USERNAME}
+  password = ""
+  password = ${?SENDGRID_PASSWORD}
 }
 
 silhouette {
